wte_class_interface.h

/*************************************************************************************************
 * main class: taxi simulator among discrete nodes with travel times loaded from external source *
 *************************************************************************************************/
	void* wte_new();
	void wte_free(void* p);
	
	int wte_load_index(void* p, unsigned int matrix_size, const char* fnbase, const char* fnext, const char* fnbase_sorted, const char* fnext_sorted,
		const char* fnbase_paths, const char* fnext_paths, int preread);
	int wte_load_distances(void* p, const char* fn, int preread);
	
	int wte_process_trip(void* p, const void* t, unsigned int tmax1, int allow_moving, int* res1);
		
	int wte_reset(void* p, int clear_drivers);
	int wte_clear(void* p);
		
	/* add one driver at the given node with the given start time */
	int wte_add_driver(void* p, unsigned int node, unsigned int start_time);
	
	
	/* get results from processing the last trip -- returns a pointer to the last result struct */
	const void* wte_get_last_result(const void* p);
	
	/* wte_trips functions */
	void wte_set_seed(void* p, uint64_t seed);
	
	int wte_read_trips(void* p, const char* fn);
	int wte_read_trips_csv(void* p, const char* fn, const char* compress, unsigned int tmin, unsigned int tmax, int tlimit_in_day,
		unsigned int length_min, unsigned int length_max, unsigned int dist_min, unsigned int dist_max, double speed_min, double speed_max, int clear_trips,
		const char* node_filter_fn, int chicago_format);
	int wte_add_trip(void* p, const void* t);
	void wte_sort_trips(void* p, int reassign_ids);
	int wte_is_sorted(const void* p);
	
	int wte_add_drivers(void* p, uint64_t n, double tavg, int use_end_locations);
		
	int wte_process_next_trip(void* p, unsigned int tmax1, int* res1);
	int wte_is_end(const void* p);
	
	
	/* helpers to convert trips to / from python objects */
	const void* wte_get_trip(const void* p, uint64_t idx);
	uint64_t wte_ntrips(const void* p);
	
	/* get a text representation of the last error that occurred (text of exception thrown by C++ code) */
	char* wte_get_error(void* p);
	
	/* Set if C++ exceptions should be handled by storing the error message in a way that
	 * can be retrieved by wte_get_error() and returning 0.
	 * If unset, C++ exceptions are not catched; this can be useful e.g. if running from a debugger. */
	void wte_set_handle_exceptions(void* p, int should_handle_exceptions);
	
	/* Get if C++ exceptions are handled internally. */
	int wte_get_handle_exceptions(const void* p);
	
	
	uint64_t wte_get_trip_idx(const void* p);
	
	/* helper functions to get info about the drivers; this returns the number of active (non-removed) drivers */
	unsigned int wte_get_total_drivers(const void* p);
	/* this returns the number of total driver IDs */
	unsigned int wte_get_total_driver_ids(const void* p);
	/* get info about one driver -- returns a reference to a driver_summary struct */
	const void* wte_get_driver_info(void* p, unsigned int d);
	
	enum wte_cruising_strategy {
			WTE_CRUISING_STRATEGY_NONE = 0, /* no cruising, drivers always stay at the node where they finished their trip */
			WTE_CRUISING_STRATEGY_DRIVER_RANDOM_NODE = 1, /* when finishing their trip, drivers select a random node to move to;
				this can be either completely random (not recommended), or based on a distribution
				that is set by set_cruising_target_dist() */
			WTE_CRUISING_STRATEGY_CALLBACK = 2, /* a callback function is provided by the user that is called whenever a driver
				finishes a trip -- use wte_set_cruising_callback() for this */
			WTE_CRUISING_STRATEGY_RANDOM_WALK = 3 /* a random walk is performed on the road network that has to be supplied with
				the wte_read_road_network() function */
		};
	
	enum wte_cruising_strategy wte_get_cruising_strategy(const void* p);
	void wte_set_cruising_strategy(void* p, enum wte_cruising_strategy strategy);
	int wte_read_cruising_target_dist(void* p, unsigned int hour, const char* fn);
	
	/* set the cruising target distribution for multiple days */
	int wte_read_cruising_target_dist_mult(void* p, const char* fn);
	
	/* filtering and copying */
	/* filter the trips in the current instance */
	void wte_filter_trips(void* p, const uint64_t* ids, size_t len);
	/* make a copy with filtering the trips */
	void* wte_copy_trips_filter(void* p, const uint64_t* ids, size_t len);
	
	
	
	/****************************************************
	 * get the list of idle and moving drivers 
	 ****************************************************/
	
	/* get the number of idle drivers */
	unsigned int wte_n_idle_drivers(const void* p);
	/* get the number of repositioning drivers */
	unsigned int wte_n_moving_drivers(const void* p);
	/* start iteration on idle drivers */
	void wte_idle_drivers_start(void* p);
	/* return if the end has already be reached when iterating on idle drivers (also returns 1 if the iterator is invalid) */
	int wte_idle_drivers_is_end(const void* p);
	/* Advances the iterator for idle drivers; returns 1 if a valid element is available or 0
	 * if the end has been already reached or if the iterator is invalid. */
	int wte_idle_drivers_advance(void* p);
	/* Stores the ID and node ID of the current idle driver (pointed to be the internal iterator) in the given locations.
	 * Returns 0 if the iterator is invalid or the end has already been reached; otherwise returns 1. */
	int wte_idle_drivers_current(void* p, unsigned int* driver_id1, unsigned int* node_id);
	
	/* start iteration on currently moving drivers */
	void wte_moving_drivers_start(void* p);
	/* return if the end has already be reached when iterating on moving drivers (also returns 1 if the iterator is invalid) */
	int wte_moving_drivers_is_end(const void* p);
	
	/* read the road network used for random walk cruising */
	int wte_read_road_network(void* p, const char* fn, int csv, int header);
	/* get and set the allowed maximum distance drivers travel during random walk cruising
	 * (in meters; zero means unlimited) */
	unsigned int wte_get_random_walk_max_dist(const void* p);
	void wte_set_random_walk_max_dist(void* p, unsigned int d);