wte.py

#!/usr/bin/env python3
# -*- coding: utf-8 -*-
#
#  libwte.py -- interface to C++ library to simulate taxi trips and
#	estimate passenger waiting times
#  
#  Copyright 2021 Daniel Kondor <kondor.dani@gmail.com>
#  
#  Redistribution and use in source and binary forms, with or without
#  modification, are permitted provided that the following conditions are
#  met:
#  
#  * Redistributions of source code must retain the above copyright
#    notice, this list of conditions and the following disclaimer.
#  * Redistributions in binary form must reproduce the above
#    copyright notice, this list of conditions and the following disclaimer
#    in the documentation and/or other materials provided with the
#    distribution.
#  * Neither the name of the  nor the names of its
#    contributors may be used to endorse or promote products derived from
#    this software without specific prior written permission.
#  
#  THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
#  "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
#  LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
#  A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
#  OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
#  SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
#  LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
#  DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
#  THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
#  (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
#  OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
#  
#  


import sys
from ctypes import *
from enum import Enum

this = sys.modules[__name__]
this._libwte_path = "./libwte.so"

class discrete_trip(Structure):
	_fields_ = [("id", c_ulong), # trip ID
				("start_ts", c_uint), # start time (UNIX timestamp)
				("end_ts", c_uint), # end time
				("start_node", c_uint), # start node ID
				("end_node", c_uint)] # end node ID
	
	def __getitem__(self, key):
		return getattr(self, key)
	
	def __setitem__(self, key, value):
		return setattr(self, key, value)

class last_res(Structure):
	_fields_ = [("tp", c_uint), # current simulation time
				("np", c_uint), # number of trips processed (including rejected trips)
				("trip_id", c_ulong), # trip ID (of last served trip)
				("driver_id", c_uint), # driver ID assigned to the last trip
				("nreject", c_uint), # number of rejected trips
				("tw", c_uint), # waiting time of last served trip (in seconds)
				("ndrivers", c_uint), # total number of idle drivers (including moving drivers)
				("tt", c_uint), # travel time of last terved trip ( = end_ts - start_ts)
				("di", c_uint), # idle time of driver assigned to the last trip (before serving the trip; in seconds)
				("trip_dist", c_uint), # distance of the last served trip (in meters)
				("driver_dist", c_uint)] # total empty travel of the driver assigned to the last served trip since their last trip (in meters)
	
	def __getitem__(self, key):
		return getattr(self, key)
	
	def __setitem__(self, key, value):
		return setattr(self, key, value)

class driver_summary(Structure):
	_fields_ = [("trips_served", c_uint), # total number of trips served by this driver
				("start_time", c_uint), # start time of the first trip served by this driver
				("end_time", c_uint), # end time of the last trip served by this driver
				("total_trip_time", c_uint), # total time spent serving trips so far (in seconds)
				("total_empty_time", c_uint), # total time spent empty (either idle, cruising or driving to pick up a passenger)
				("total_trip_distance", c_uint), # total distance of trips served (in meters)
				("total_empty_distance", c_uint), # total distance spent empty (either cruising or driving to pick up a passenger); does not include any cruising before the first trip or since the last trip
				("last_empty_distance", c_uint), # distance spent cruising since the end of the last trip
				("st", c_int)] # current state of the driver -- enum
	
	class state(Enum):
		OCCUPIED = 0 # driver is serving a trip (or is traveling to serve a trip)
		ADDED = 1 # initial state of a driver before becomes available
		IDLE = 2 # driver is idle (at a node, not moving)
		MOVING = 3 # driver is repositioning / cruising
		REMOVED = 4 # driver was removed, ID is not valid anymore
	
	def __getitem__(self, key):
		res = getattr(self, key)
		if key == "st":
			return driver_summary.state(res)
		return res
	
	def __setitem__(self, key, value):
		return setattr(self, key, value)


class libwte1:
	def __init__(self,path):
		self.libwte = cdll.LoadLibrary(path)
		
		# wte -- taxi simulation in real space (travel times loaded from binary index files))
		self.wte_new = self.libwte.wte_new
		self.wte_new.restype = c_void_p
		self.wte_free = self.libwte.wte_free
		self.wte_free.argtypes = [c_void_p]
		
		self.wte_load_index = self.libwte.wte_load_index
		self.wte_load_distances = self.libwte.wte_load_distances
		self.wte_process_trip = self.libwte.wte_process_trip
		self.wte_reset = self.libwte.wte_reset
		self.wte_clear = self.libwte.wte_clear
		self.wte_add_driver = self.libwte.wte_add_driver
		
		self.wte_load_index.argtypes = [c_void_p, c_uint, c_char_p, c_char_p, c_char_p, c_char_p, c_char_p, c_char_p, c_int]
		self.wte_load_index.restype = c_int
		self.wte_load_distances.argtypes = [c_void_p, c_char_p, c_int]
		self.wte_load_distances.restype = c_int
		self.wte_process_trip.argtypes = [c_void_p, POINTER(discrete_trip), c_uint, c_int, POINTER(c_int)]
		self.wte_process_trip.restpye = c_int
		
		self.wte_reset.argtypes = [c_void_p, c_int];
		self.wte_clear.argtypes = [c_void_p];
		self.wte_reset.restype = c_int;
		self.wte_clear.restype = c_int;
		
		self.wte_add_driver = self.libwte.wte_add_driver
		self.wte_add_driver.argtypes = [c_void_p, c_uint, c_uint]
		self.wte_add_driver.restype = c_int
		
		self.wte_get_last_res = self.libwte.wte_get_last_result
		self.wte_get_last_res.argtypes = [c_void_p]
		self.wte_get_last_res.restype = POINTER(last_res)
		
		self.wte_set_seed = self.libwte.wte_set_seed
		self.wte_set_seed.argtypes = [c_void_p, c_ulong]
		
		self.wte_read_trips = self.libwte.wte_read_trips
		self.wte_read_trips.argtypes = [c_void_p, c_char_p]
		self.wte_read_trips.restype = c_int
		self.wte_read_trips_csv = self.libwte.wte_read_trips_csv
		self.wte_read_trips_csv.argtypes = [c_void_p, c_char_p, c_char_p, c_uint, c_uint, c_int, c_uint, c_uint, c_uint, c_uint, c_double, c_double, c_int]
		self.wte_read_trips_csv.restype = c_int
		
		self.wte_add_trip = self.libwte.wte_add_trip
		self.wte_add_trip.argtypes = [c_void_p, POINTER(discrete_trip)]
		self.wte_add_trip.restype = c_int
		self.wte_sort_trips = self.libwte.wte_sort_trips
		self.wte_sort_trips.argtypes = [c_void_p, c_int]
		self.wte_is_sorted = self.libwte.wte_is_sorted
		self.wte_is_sorted.argtypes = [c_void_p]
		self.wte_is_sorted.restype = c_int
		
		self.wte_add_drivers = self.libwte.wte_add_drivers
		self.wte_add_drivers.argtypes = [c_void_p, c_ulong, c_double, c_int]
		self.wte_add_drivers.restype = c_int
		
		self.wte_process_next_trip = self.libwte.wte_process_next_trip
		self.wte_process_next_trip.argtypes = [c_void_p, c_uint, POINTER(c_int)]
		self.wte_process_next_trip.restype = c_int
		
		self.wte_is_end = self.libwte.wte_is_end
		self.wte_is_end.argtypes = [c_void_p]
		self.wte_is_end.restype = c_int
		
		self.wte_get_trip = self.libwte.wte_get_trip
		self.wte_get_trip.argtypes = [c_void_p, c_ulong]
		self.wte_get_trip.restype = POINTER(discrete_trip)
		self.wte_ntrips = self.libwte.wte_ntrips
		self.wte_ntrips.argtypes = [c_void_p]
		self.wte_ntrips.restype = c_ulong
		
		self.wte_get_error = self.libwte.wte_get_error
		self.wte_get_error.argtypes = [c_void_p]
		self.wte_get_error.restype = c_char_p
		
		self.wte_set_handle_exceptions = self.libwte.wte_set_handle_exceptions
		self.wte_set_handle_exceptions.argtypes = [c_void_p, c_int]
		self.wte_get_handle_exceptions = self.libwte.wte_get_handle_exceptions
		self.wte_get_handle_exceptions.argtypes = [c_void_p]
		self.wte_get_handle_exceptions.restype = c_int
		
		self.wte_get_trip_idx = self.libwte.wte_get_trip_idx
		self.wte_get_trip_idx.argtypes = [c_void_p]
		self.wte_get_trip_idx.restype = c_ulong
		
		# driver statistics
		self.wte_get_total_drivers = self.libwte.wte_get_total_drivers
		self.wte_get_total_drivers.argtypes = [c_void_p]
		self.wte_get_total_drivers.restype = c_uint
		self.wte_get_total_driver_ids = self.libwte.wte_get_total_driver_ids
		self.wte_get_total_driver_ids.argtypes = [c_void_p]
		self.wte_get_total_driver_ids.restype = c_uint
		self.wte_get_driver_info = self.libwte.wte_get_driver_info
		self.wte_get_driver_info.argtypes = [c_void_p, c_uint]
		self.wte_get_driver_info.restype = POINTER(driver_summary)
		
		# cruising
		self.wte_get_cruising_strategy = self.libwte.wte_get_cruising_strategy
		self.wte_get_cruising_strategy.argtypes = [c_void_p]
		self.wte_get_cruising_strategy.restype = c_int
		self.wte_set_cruising_strategy = self.libwte.wte_set_cruising_strategy
		self.wte_set_cruising_strategy.argtypes = [c_void_p, c_int]
		
		self.wte_read_cruising_target_dist = self.libwte.wte_read_cruising_target_dist
		self.wte_read_cruising_target_dist.argtypes = [c_void_p, c_uint, c_char_p]
		self.wte_read_cruising_target_dist.restype = c_int
		
		self.wte_read_cruising_target_dist_mult = self.libwte.wte_read_cruising_target_dist_mult
		self.wte_read_cruising_target_dist_mult.argtypes = [c_void_p, c_char_p]
		self.wte_read_cruising_target_dist_mult.restype = c_int
		
		self.wte_read_road_network = self.libwte.wte_read_road_network
		self.wte_read_road_network.argtypes = [c_void_p, c_char_p, c_int, c_int]
		self.wte_read_road_network.restype = c_int
		
		self.wte_get_random_walk_max_dist = self.libwte.wte_get_random_walk_max_dist
		self.wte_get_random_walk_max_dist.argtypes = [c_void_p]
		self.wte_get_random_walk_max_dist.restype = c_uint
		
		self.wte_set_random_walk_max_dist = self.libwte.wte_set_random_walk_max_dist
		self.wte_set_random_walk_max_dist.argtypes = [c_void_p, c_uint]
		
		# filtering and copy of trips
		self.wte_filter_trips = self.libwte.wte_filter_trips
		self.wte_filter_trips.argtypes = [c_void_p, POINTER(c_ulong), c_ulong]
		
		self.wte_copy_trips_filter = self.libwte.wte_copy_trips_filter
		self.wte_copy_trips_filter.argtypes = [c_void_p, POINTER(c_ulong), c_ulong]
		self.wte_copy_trips_filter.restype = c_void_p
		
		
		# get info about idle and moving drivers
		self.wte_n_idle_drivers = self.libwte.wte_n_idle_drivers
		self.wte_n_idle_drivers.argtypes = [c_void_p]
		self.wte_n_idle_drivers.restype = c_uint
		
		self.wte_n_moving_drivers = self.libwte.wte_n_moving_drivers
		self.wte_n_moving_drivers.argtypes = [c_void_p]
		self.wte_n_moving_drivers.restype = c_uint
		
		self.wte_idle_drivers_start = self.libwte.wte_idle_drivers_start
		self.wte_idle_drivers_start.argtypes = [c_void_p]
		
		self.wte_idle_drivers_is_end = self.libwte.wte_idle_drivers_is_end
		self.wte_idle_drivers_is_end.argtypes = [c_void_p]
		self.wte_idle_drivers_is_end.restype = c_int
		
		self.wte_idle_drivers_advance = self.libwte.wte_idle_drivers_advance
		self.wte_idle_drivers_advance.argtypes = [c_void_p]
		self.wte_idle_drivers_advance.restype = c_int
		
		self.wte_idle_drivers_current = self.libwte.wte_idle_drivers_current
		self.wte_idle_drivers_current.argtypes = [c_void_p, POINTER(c_uint), POINTER(c_uint)]
		self.wte_idle_drivers_current.restype = c_int
		
	
		self.wte_moving_drivers_start = self.libwte.wte_moving_drivers_start
		self.wte_moving_drivers_start.argtypes = [c_void_p]
		
		self.wte_moving_drivers_is_end = self.libwte.wte_moving_drivers_is_end
		self.wte_moving_drivers_is_end.argtypes = [c_void_p]
		self.wte_moving_drivers_is_end.restype = c_int
